--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <script src="https://kit.fontawesome.com/8ab18610bc.js" crossorigin="anonymous"></script>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <title>Elias Alonzo Portfolio</title>
+    <title>Elias Alonzo</title>
   </head>
   <body >
     <noscript>You need to enable JavaScript to run this app.</noscript>
